--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "azure-web-app",
+  "name": "azure-static-web-app",
   "description": "An Aurelia client application.",
   "version": "0.1.0",
   "repository": {
@@ -9,7 +9,10 @@
   "license": "MIT",
   "dependencies": {
     "aurelia-bootstrapper": "^2.3.3",
-    "aurelia-animator-css": "^1.0.4"
+    "aurelia-animator-css": "^1.0.4",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -43,7 +46,8 @@
   },
   "scripts": {
     "build": "au build --env prod",
-    "start": "au run"
+    "build-for-testing": "au build",
+    "dev": "au run --watch"
   },
   "engines": {
     "node": ">=10.12.0"
